[package]
name = "git-toolbox"
version = "0.0.9000"
authors = ["Taras Zakharko <taras.zakharko@uzh.ch>"]
edition = "2018"
description = "Git extension for Linguists's Toolbox"
readme = "README.md"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

[dependencies]
regex = "1.3.6"
clap = {version = "~2.33.0", features = ["color"]}
toml = "0.5.6"
serde = {version = "1.0.106", features = ["derive"]}
git2 = {version="0.13", default-features = false}
lazy_static = "1.4.0"
textwrap = "0.11.0"
itertools = "0.9.0"
multimap = "0.8.1"
arrayvec = "0.5.1"
unicode-normalization = "0.1.12"
unicode-segmentation = "1.6.0"
deunicode = "1.1.1"
console = "0.11.3"
anyhow = "1.0.31"
pathdiff = "0.2.0"
smart-default = "0.6.0"
indicatif = "0.14.0"
alphanumeric-sort = "1.0.13"
path-clean = "0.1.0"
tap = "0.4.0"
